--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
     "jest": "^29.3.1",
     "jest-puppeteer": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "puppeteer": "^19.5.2",
     "sinon": "^15.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "puppeteer": "^19.5.2"
   }
 }
