--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ build_script:
   - npm run build   # команда сборки
 
 test_script:
-  - npm run lint && npm run e2e # скрипт запуска
+  - npm run lint # скрипт запуска
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
